fix: section alignment

--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -171,6 +171,7 @@ footer {
     min-height: 100vh;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 h1{
